--- a/02/src/search/index.html
+++ b/02/src/search/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div id="root"><!--HTML_PLACEHOLDER--></div>
-    <script type="text/javascript" src="https://11.url.cn/now/lib/16.2.0/react.min.js"></script>
-    <script type="text/javascript" src="https://11.url.cn/now/lib/16.2.0/react-dom.min.js"></script>
+    <!-- <script type="text/javascript" src="https://11.url.cn/now/lib/16.2.0/react.min.js"></script> -->
+    <!-- <script type="text/javascript" src="https://11.url.cn/now/lib/16.2.0/react-dom.min.js"></script> -->
+    <!-- <script type="text/javascript" src="../build/library/library.dll.js"></script> -->
     <!--INITIAL_DATA_PLACEHOLDER-->
 </body>
 </html>
